--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,23 +1,51 @@
 ---
+content:
+  width: 100%
 layout: landing
 ---
 
+import { Button } from "vocs/components";
 import { HomePage } from "vocs/components";
 
-<HomePage.Root>
-  <HomePage.Logo />
-  <h1 className="text-3xl">
-    A modular Bitcoin Rollup-as-a-Service with a Decentralised verifier network
-    & MPC-TSS Bridge
-  </h1>
-  <br />
-  <br />
-  <div className="flex gap-4">
-    <HomePage.Button href="/" variant="accent">
-      Whitepaper
-    </HomePage.Button>
-    <HomePage.Button href="/overview/introduction" variant="accent">
-      Docs
-    </HomePage.Button>
+<div className="max-w-[1200px] mx-auto vp-doc relative px-[24px] md:mt-[12px] md:px-0 md:mb-20">
+  <div className="flex flex-col items-center justify-center pt-20">
+    <img className="hidden dark:block" src="/assets/docs-icon.svg" alt="docs" />
+    <img className="block dark:hidden" src="/assets/docs-icon-light.svg" alt="docs" />
+      <HomePage.Tagline className="!text-[40px] dark:text-white text-black !font-bold mb-10"> Surge Docs</HomePage.Tagline>
+
+      <HomePage.Description className="mb-10 !text-base !font-bold dark:!text-grey-100 !text-grey-100 uppercase">   Where would you like to get started?</HomePage.Description>
+
+
+    <div className="grid grid-cols-1 md:grid-cols-4 gap-5">
+      <Button href="/overview/introduction" className="customBtn">
+        <div className="py-6 px-4 rounded-xl bg-white dark:bg-grey-200 border border-grey-600 dark:border-grey-300">
+          <p className="dark:text-white text-black text-2xl mb-2.5">Full Documentation</p>
+          <p className="dark:text-grey-400 mb-2.5">PoS based Zero-Knowledge Proofs verifier with a decentralized network of validators.</p>
+          <img src="/assets/full-docs.png" alt="full docs" />
+        </div>
+    </Button>
+      <Button href="/surge-building-blocks/zkp-verifier-network" className="customBtn">
+        <div className="py-6 px-4 rounded-xl bg-white dark:bg-grey-200 border border-grey-600 dark:border-grey-300">
+          <p className="dark:text-white text-black text-2xl mb-2.5">ZK-Proof Verifier</p>
+          <p className="dark:text-grey-400 mb-2.5">PoS based Zero-Knowledge Proofs verifier with a decentralized network of validators.</p>
+          <img src="/assets/zk-proof.png" alt="zk proof" />
+        </div>
+    </Button>
+      <Button href="/surge-building-blocks/mpc-tss-bridge" className="customBtn">
+        <div className="py-6 px-4 rounded-xl bg-white dark:bg-grey-200 border border-grey-600 dark:border-grey-300">
+          <p className="dark:text-white text-black text-2xl mb-2.5">MPC TSS bridge</p>
+          <p className="dark:text-grey-400 mb-2.5">PoS based Zero-Knowledge Proofs verifier with a decentralized network of validators.</p>
+          <img src="/assets/tss-bridge.png" alt="MPC TSS bridge" />
+        </div>
+    </Button>
+      <Button href="/surge-building-blocks/utilities/overview" className="customBtn">
+        <div className="py-6 px-4 rounded-xl bg-white dark:bg-grey-200 border border-grey-600 dark:border-grey-300">
+          <p className="dark:text-white text-black text-2xl mb-2.5">Auxiliary Utilities</p>
+          <p className="dark:text-grey-400 mb-2.5">PoS based Zero-Knowledge Proofs verifier with a decentralized network of validators.</p>
+          <img src="/assets/auxilary.png" alt="auxilary" />
+        </div>
+    </Button>
+    </div>
+
   </div>
-</HomePage.Root>
+</div>
