--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -8,18 +8,15 @@ import { Button } from "vocs/components";
 import { HomePage } from "vocs/components";
 
 <div className="max-w-[1200px] mx-auto vp-doc relative px-[24px] md:mt-[12px] md:px-0 md:mb-20">
-  <div className="flex flex-col items-center justify-center pt-20">
+  <div className="flex flex-col items-center justify-center">
     <img className="hidden dark:block" src="/assets/docs-icon.svg" alt="docs" />
     <img className="block dark:hidden" src="/assets/docs-icon-light.svg" alt="docs" />
-      <HomePage.Tagline className="!text-[40px] dark:text-white text-black !font-bold mb-10"> Surge Docs</HomePage.Tagline>
-
-      <HomePage.Description className="mb-10 !text-base !font-bold dark:!text-grey-100 !text-grey-100 uppercase">   Where would you like to get started?</HomePage.Description>
-
-
+      <HomePage.Tagline className="!text-[40px] !font-bold mb-10"> Surge Docs</HomePage.Tagline>
+      <HomePage.Description className="mb-10 !text-base !font-bold dark:!text-grey-100 !text-grey-100"> Where would you like to get started?</HomePage.Description>
     <div className="grid grid-cols-1 md:grid-cols-4 gap-5">
       <Button href="/overview/introduction" className="customBtn">
         <div className="py-6 px-4 rounded-xl bg-white dark:bg-grey-200 border border-grey-600 dark:border-grey-300">
-          <p className="dark:text-white text-black text-2xl mb-2.5">Full Documentation</p>
+          <p className="dark:text-white text-black text-2xl mb-2.5">Get started</p>
           <p className="dark:text-grey-400 mb-2.5">PoS based Zero-Knowledge Proofs verifier with a decentralized network of validators.</p>
           <img src="/assets/full-docs.png" alt="full docs" />
         </div>
