fix: Change Font weight, color, added favicon

--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
@@ -41,6 +41,6 @@ We can even build trust-minimized two-way peg mechanism, secured by ZK proofs an
 
 ## Status
 
-`Currently WIP`
+**Currently WIP**
 
 [https://github.com/BitVM/BitVM](https://github.com/BitVM/BitVM)
