--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
@@ -8,10 +8,10 @@ Here are some ways through which 100% Bitcoin finality is achieved, reinforcing 
 
 <img src="/assets/finality.png" alt="Finality" />
 
-1. `Decentralized Consensus:` Utilizing Bitcoin's decentralized network of nodes to validate transactions ensures no single entity can alter the blockchain unilaterally, solidifying each transaction's permanence once confirmed.
+1. **Decentralized Consensus:** Utilizing Bitcoin's decentralized network of nodes to validate transactions ensures no single entity can alter the blockchain unilaterally, solidifying each transaction's permanence once confirmed.
 
-2. `Proof of Work (PoW):` Bitcoin's PoW consensus mechanism requires miners to solve complex cryptographic puzzles. This process not only secures the network but also makes reversing transactions computationally impractical, thereby achieving finality.
+2. **Proof of Work (PoW):** Bitcoin's PoW consensus mechanism requires miners to solve complex cryptographic puzzles. This process not only secures the network but also makes reversing transactions computationally impractical, thereby achieving finality.
 
-3. `Chain Maturity:` Bitcoin transactions gain additional security as they are buried under more blocks in the blockchain. Typically, after six confirmations, a transaction is considered final due to the immense difficulty of altering the blockchain's history.
+3. **Chain Maturity:** Bitcoin transactions gain additional security as they are buried under more blocks in the blockchain. Typically, after six confirmations, a transaction is considered final due to the immense difficulty of altering the blockchain's history.
 
-4. `The Nakamoto Release and Stacks Hard Fork:` An upcoming innovation, the [Nakamoto Release,](https://stacks.org/nakamoto-activation-update) represents a hard fork on the Stacks network, specifically designed to utilize Bitcoin finality. By anchoring transactions and smart contracts directly to Bitcoin's blockchain, it ensures the same level of finality and security as Bitcoin transactions themselves
+4. **The Nakamoto Release and Stacks Hard Fork:** An upcoming innovation, the [Nakamoto Release,](https://stacks.org/nakamoto-activation-update) represents a hard fork on the Stacks network, specifically designed to utilize Bitcoin finality. By anchoring transactions and smart contracts directly to Bitcoin's blockchain, it ensures the same level of finality and security as Bitcoin transactions themselves
