--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -6,7 +6,7 @@ Lets see the Bitcoin Roadmap from 2013 to Now,
 
 ZK Rollups are a layer-2 scaling solution that perform transaction execution outside the main blockchain (layer-1) while maintaining data integrity and security through proofs.
 
-`Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges,` and `BitVM` collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
+**Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges,** and **BitVM** collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
 
 ## Trustless ZK Rollup
 
@@ -54,7 +54,7 @@ It can be posted on the any DA layers,
 
 - Other DA Layers.
 
-`Limitations with this,`
+**Limitations with this,**
 
 How can they cross compose and share liquidity ?
 
