--- a/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
+++ b/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
@@ -6,8 +6,8 @@ The RaaS Architecture aims to navigate the Bitcoin Scaling Trilemma, which posit
 
 <img src="/assets/scaling-trilemma.png" alt="scaling trilemma" />
 
-- `Scalability:` Through L2 solutions like Rollups and sidechains, transaction throughput is significantly increased, and latency is reduced, accommodating a higher volume of transactions.
+- **Scalability:** Through L2 solutions like Rollups and sidechains, transaction throughput is significantly increased, and latency is reduced, accommodating a higher volume of transactions.
 
-- `Decentralization:` Maintaining a decentralized network is paramount. L2 solutions are designed to operate without central points of control, aligning with Bitcoin's ethos.
+- **Decentralization:** Maintaining a decentralized network is paramount. L2 solutions are designed to operate without central points of control, aligning with Bitcoin's ethos.
 
-- `Security:` The final settlement on the Bitcoin blockchain ensures that despite the off-chain operations for scalability, the integrity and security of transactions are not compromised.
+- **Security:** The final settlement on the Bitcoin blockchain ensures that despite the off-chain operations for scalability, the integrity and security of transactions are not compromised.
