--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -8,19 +8,25 @@ Surge provides a platform for launching high-performance, customizable, general 
 
 The primary goal of Surge is to address three significant issues in the Bitcoin ecosystem using Rollups:
 
-- Providing a secured L2 bridge with Bitcoin Security.
-- Enhancing liquidity through improved integrations and interoperability.
-- Advancing ecosystem development with robust tooling for faster deployment of existing dApps.
+- <p className="_list-paragraph">
+    Providing a secured L2 bridge with Bitcoin Security.
+  </p>
+- <p className="_list-paragraph">
+    Enhancing liquidity through improved integrations and interoperability.
+  </p>
+- <p className="_list-paragraph">
+    Advancing ecosystem development with robust tooling for faster deployment of
+    existing dApps.
+  </p>
 
-We are achieving this with a novel `"Superstack"` layer on top of Bitcoin.
+We are achieving this with a novel **"Superstack"** layer on top of Bitcoin.
 
-The `Superstack` is an intermediate, foundational, PoS-based layer that facilitates three major factors:
+The **Superstack** is an intermediate, foundational, PoS-based layer that facilitates three major factors:
 
-- `MPC TSS Bridge:` A two-way peg bridge powered by decentralized Threshold Signature Schemes, where signature and key-share generation by network nodes ensures secure computation with an honest minority.
-- `ZKP Verifier with Proof Inscription:` A network of decentralized nodes that validate proofs from the Rollups and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.
-- `Utilities:` Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.
+- **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes, where signature and key-share generation by network nodes ensures secure computation with an honest minority.</p>
+- **ZKP Verifier with Proof Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate proofs from the Rollups and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
+- **Utilities:** <p className="_list-paragraph">Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.</p>
 
 With these components in place, Surge will become a comprehensive platform for building, launching, innovating, and growing the Rollup ecosystem. Surge also provides out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
 
 This approach enables the creation of use case-specific rollups and multiple execution environments on top of Bitcoin, which can position BTC as a real currency beyond just payments.
-
