--- a/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
+++ b/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
@@ -24,8 +24,8 @@ By integrating MPC technology within a verifier network that accesses the Data A
 
 ### Benefits of Using MPC in Surge
 
-- `Decentralized Key Management:` In an MPC system, the private key required to sign blockchain transactions is never fully assembled in one location. Instead, key shares are distributed among multiple parties
+- **Decentralized Key Management:** In an MPC system, the private key required to sign blockchain transactions is never fully assembled in one location. Instead, key shares are distributed among multiple parties
 
-- `Verification Without Full Disclosure:` MPC allows nodes in the network to verify transactions and proofs without needing to reveal the underlying data to each other. This enhances privacy and security, as each node only processes parts of the data necessary for verification
+- **Verification Without Full Disclosure:** MPC allows nodes in the network to verify transactions and proofs without needing to reveal the underlying data to each other. This enhances privacy and security, as each node only processes parts of the data necessary for verification
 
-- `Reduction in Trust Dependencies:` By distributing decision-making and data handling across several nodes, the MPC-based system does not rely on a central authority or a trusted third party.
+- **Reduction in Trust Dependencies:** By distributing decision-making and data handling across several nodes, the MPC-based system does not rely on a central authority or a trusted third party.
