--- a/docs/pages/overview/why-surge.mdx
+++ b/docs/pages/overview/why-surge.mdx
@@ -2,11 +2,11 @@
 
 Bitcoin L2s are not just a narrative, hype, or even experimental; they're an adaptive response from the Bitcoin community to grow beyond scalability limitations. It's easy to forget that Bitcoin is a network and an asset: BTC. It's the most decentralized and secure Network, with BTC having the highest market capitalization.
 
-`A fundamental question:` Why Bitcoin L2s now? The following events have an answer.
+**A fundamental question:** Why Bitcoin L2s now? The following events have an answer.
 
-- `Bitcoin Upgrades:` Significant advancements in Bitcoin's scalability began with the Segregated Witness(SegWit) update in July 2017. The next major upgrade, Taproot, was activated in November 2021.
-- `Ordinals:` Ordinals sparked the builder culture in the Bitcoin Ecosystem, such as early NFT and token projects that flooded the Ethereum Network in 2017. Which eventually led the Ethereum community to address scalability issues.
-- `Ethereum L2 success:` The Ethereum community's layered approach has led to billions in total value locked (TVL). Blob is a very recent upgrade that validates the need for L2s.
+- **Bitcoin Upgrades:** <p className="_list-paragraph"> Significant advancements in Bitcoin's scalability began with the Segregated Witness(SegWit) update in July 2017. The next major upgrade, Taproot, was activated in November 2021.</p>
+- **Ordinals:** <p className="_list-paragraph">Ordinals sparked the builder culture in the Bitcoin Ecosystem, such as early NFT and token projects that flooded the Ethereum Network in 2017. Which eventually led the Ethereum community to address scalability issues.</p>
+- **Ethereum L2 success:** <p className="_list-paragraph">The Ethereum community's layered approach has led to billions in total value locked (TVL). Blob is a very recent upgrade that validates the need for L2s.</p>
 
 We now witness significant advances in Bitcoin layers, empowering them to act on the BTC asset. Bitcoin L2s inherit Bitcoin's reorg security and finality while overcoming its programmability and performance limitations, promising a brighter future for Bitcoin.
 
