--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
@@ -25,6 +25,6 @@ Bitcoin serves as the ultimate settlement layer for Layer 2 Network. The rollup 
 
 The use of Bitcoin for final settlement brings unparalleled security benefits to L2 networks:
 
-- **Bitcoin Finality:** Transactions that achieve finality on the Bitcoin blockchain are irreversible and universally accepted, providing a solid foundation for the security of L2 networks.
+- `Bitcoin Finality:` Transactions that achieve finality on the Bitcoin blockchain are irreversible and universally accepted, providing a solid foundation for the security of L2 networks.
 
-- **Leveraging Bitcoin's Security:** By anchoring L2 states to the Bitcoin blockchain, the L2 networks inherit the immense hashing power and security mechanisms of Bitcoin, making attacks prohibitively expensive and complex.
+- `Leveraging Bitcoin's Security:` By anchoring L2 states to the Bitcoin blockchain, the L2 networks inherit the immense hashing power and security mechanisms of Bitcoin, making attacks prohibitively expensive and complex.
