--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
@@ -4,13 +4,13 @@
 
 Bridges the economic security of Bitcoin with the operational security of PoS chains.
 
-1. **The Problem:** While Bitcoin operates on a Proof-of-Work (PoW) system, many other blockchains use Proof-of-Stake (PoS) for security, which relies on capital (staked assets) rather than computational power. However, securing these PoS networks can be expensive due to the need for substantial capital, which can be a challenge, especially for smaller or newer chains.
+1. `The Problem:` While Bitcoin operates on a Proof-of-Work (PoW) system, many other blockchains use Proof-of-Stake (PoS) for security, which relies on capital (staked assets) rather than computational power. However, securing these PoS networks can be expensive due to the need for substantial capital, which can be a challenge, especially for smaller or newer chains.
 
-2. **Bitcoin's Role:** Bitcoin, being the largest and one of the most stable cryptocurrencies, represents a huge pool of capital. Most of this capital sits idle, not directly securing the Bitcoin network or generating returns for holders.
+2. `Bitcoin's Role:` Bitcoin, being the largest and one of the most stable cryptocurrencies, represents a huge pool of capital. Most of this capital sits idle, not directly securing the Bitcoin network or generating returns for holders.
 
-3. **The Proposal:** Enabling Bitcoin holders to stake their bitcoins to secure PoS chains. This does not mean moving bitcoins to those chains but rather leveraging their value to back the security of PoS networks. By staking their bitcoins, holders can earn yields without having to transfer their assets to another blockchain, maintaining control and reducing risk.
+3. `The Proposal:` Enabling Bitcoin holders to stake their bitcoins to secure PoS chains. This does not mean moving bitcoins to those chains but rather leveraging their value to back the security of PoS networks. By staking their bitcoins, holders can earn yields without having to transfer their assets to another blockchain, maintaining control and reducing risk.
 
-4. **How It Works:**
+4. `How It Works:`
 
    - Security Sharing Protocol: A protocol is designed that allows Bitcoin to be staked in a way that it can contribute to the security of PoS chains. This involves locking bitcoins in a manner that if the PoS chain they are securing experiences a security breach (like a double-spend attack), a portion of the staked bitcoins can be "slashed" or forfeited as a penalty.
 
@@ -20,7 +20,7 @@ Bridges the economic security of Bitcoin with the operational security of PoS ch
 
    - Modularity: This system is designed to be compatible with various PoS algorithms, making it broadly applicable across many blockchain networks.
 
-5. **Babylon Chain:** A specific implementation named the Babylon Chain acts as a mediator, facilitating the synchronization between Bitcoin stakers and the PoS chains they choose to support. This chain helps organize the staking process, records transactions for transparency and security, and provides a marketplace for staking and earning yields.
+5. `Babylon Chain:` A specific implementation named the Babylon Chain acts as a mediator, facilitating the synchronization between Bitcoin stakers and the PoS chains they choose to support. This chain helps organize the staking process, records transactions for transparency and security, and provides a marketplace for staking and earning yields.
 
 In essence, Bitcoin staking aims to tap into the vast reserves of Bitcoin as a secure and stable asset to bolster the security of PoS blockchains. This creates a win-win situation: PoS chains get a more robust security foundation without the need for excessive inflation or high staking requirements, and Bitcoin holders get new avenues for their assets to generate returns.
 
