--- a/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
+++ b/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
@@ -7,7 +7,7 @@ A simplified transaction on the bitcoin will look like this,
   alt="how does a bitcoin transaction work"
 />
 
-In **Bitcoin L2's**, A typical transaction flow within this architecture begins at the
+In `Bitcoin L2's`, A typical transaction flow within this architecture begins at the
 application layer, moves through L2 or L3 solutions for processing, and concludes
 with final settlement on the Bitcoin blockchain. This streamlined process ensures
 efficiency, security, and adherence to Bitcoin's decentralized nature.
