--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -8,11 +8,11 @@ Surge leverages a modular architecture to streamline the deployment of Bitcoin L
 
 Surge provides a layered approach for launching the Bitcoin Rollups by separating the Executions, Settlement and Data Layer
 
-1. **Execution Layer:** Supports multiple virtual machines (VMs) including EVM and MoveVM, allowing developers to build on various rollup frameworks.
+1. `Execution Layer:` Supports multiple virtual machines (VMs) including EVM and MoveVM, allowing developers to build on various rollup frameworks.
 
-2. **Settlement Layer:** Manages transaction finalization using a robust, PoS-based network that ensures security and efficiency.
+2. `Settlement Layer:` Manages transaction finalization using a robust, PoS-based network that ensures security and efficiency.
 
-3. **Data Layer:** Maintains data availability and integrity, crucial for transparent operations across the platform.
+3. `Data Layer:` Maintains data availability and integrity, crucial for transparent operations across the platform.
 
 <img src="/assets/architecture-model.png" alt="architecture model" />
 
@@ -70,8 +70,8 @@ Bitcoin layers have evolved to encompass a comprehensive suite of solutions, inc
   alt="superstack"
 />
 
-- **Layer 2 (L2) Scaling Solutions:** Aimed at enhancing Bitcoin transaction throughput and reducing latency. L2 solutions like Lightning Network, sidechains, and Rollup-as-a-Service (RaaS) platforms are pivotal in achieving this goal.
+- `Layer 2 (L2) Scaling Solutions:` Aimed at enhancing Bitcoin transaction throughput and reducing latency. L2 solutions like Lightning Network, sidechains, and Rollup-as-a-Service (RaaS) platforms are pivotal in achieving this goal.
 
-- **Layer 3 (L3) and Beyond:** Focuses on providing application-specific functionalities, enabling developers to create bespoke solutions for DApps, marketplaces, and more, all while leveraging the underlying security and efficiency of L2 solutions.
+- `Layer 3 (L3) and Beyond:` Focuses on providing application-specific functionalities, enabling developers to create bespoke solutions for DApps, marketplaces, and more, all while leveraging the underlying security and efficiency of L2 solutions.
 
-- **Data Layer:** Ensures data availability and integrity, serving as a critical component for maintaining transparent and trustless operations across all layers.
+- `Data Layer:` Ensures data availability and integrity, serving as a critical component for maintaining transparent and trustless operations across all layers.
