--- a/docs/pages/surge-building-blocks/utilities/overview.mdx
+++ b/docs/pages/surge-building-blocks/utilities/overview.mdx
@@ -24,6 +24,6 @@ This allows secure transfers and synchronization of assets like Runes and Ordina
 
 ## Future Enhancements
 
-**IBC Compatibility and Support:** Surge plans to integrate Inter-Blockchain Communication (IBC) protocols to enhance cross-chain interactions and functionalities.
+`IBC Compatibility and Support:` Surge plans to integrate Inter-Blockchain Communication (IBC) protocols to enhance cross-chain interactions and functionalities.
 
-**Expansion of Services:** The ongoing development of new tools and services will meet the evolving needs of the blockchain community and support emerging dApps and blockchain interactions.
+`Expansion of Services:` The ongoing development of new tools and services will meet the evolving needs of the blockchain community and support emerging dApps and blockchain interactions.
