--- a/docs/pages/surge-building-blocks/superstack.mdx
+++ b/docs/pages/surge-building-blocks/superstack.mdx
@@ -6,17 +6,17 @@ The Surge Superstack serves as an intermediate layer above the Bitcoin Settlemen
 
 ## Decentralized Network Foundation
 
-- **Architecture:** PoS-based decentralization ensures network security and efficiency.
+- `Architecture:` PoS-based decentralization ensures network security and efficiency.
 
-- **Validator Program:** Our Superstack validator program is designed to expand our network. It allows participants to set up nodes and contribute to the network's robustness, enhancing decentralized validation processes.
+- `Validator Program:` Our Superstack validator program is designed to expand our network. It allows participants to set up nodes and contribute to the network's robustness, enhancing decentralized validation processes.
 
 ## Core Functions of Superstack
 
-- **ZKP Verification Layer:** Validates the correctness of transaction proofs without revealing any underlying data, enhancing privacy and security. Acts as a crucial layer for trustless and verifiable rollup interactions within Bitcoin.
+- `ZKP Verification Layer:` Validates the correctness of transaction proofs without revealing any underlying data, enhancing privacy and security. Acts as a crucial layer for trustless and verifiable rollup interactions within Bitcoin.
 
-- **MPC TSS Secure Bridge:** Provides a secure, trust-minimized bridge 2-way peg between Bitcoin and rollups. Utilizes Threshold Signature Schemes (TSS) to manage and secure the pegs.
+- `MPC TSS Secure Bridge:` Provides a secure, trust-minimized bridge 2-way peg between Bitcoin and rollups. Utilizes Threshold Signature Schemes (TSS) to manage and secure the pegs.
 
-- **Utilities for Rollups:** Includes essential tools such as oracles, indexers, and bridges for runes and ordinals.
+- `Utilities for Rollups:` Includes essential tools such as oracles, indexers, and bridges for runes and ordinals.
 
 <img
   src="/assets/superstack-core-functions.png"
