--- a/docs/pages/basics/attempts-to-scale-bitcoin.mdx
+++ b/docs/pages/basics/attempts-to-scale-bitcoin.mdx
@@ -35,22 +35,26 @@ This upgrade was activated as a soft fork at block 709,632 and incorporated thre
 
 These BIPs collectively streamline transaction processing by allowing for the aggregation of multiple signatures, thereby making transactions both faster and more compact.
 
-## 3. Ordinals
+## Why there is a Surge of demand to scale Bitcoins ?
 
-[Ordinals](https://docs.ordinals.com/overview.html), enables the creation of immutable on-chain digital artifacts. This is projected to evolve into a substantial [$4.5B market by 2025.](https://bitcoinworld.co.in/galaxy-tips-bitcoin-nft-market-to-hit-4-5b-by-2025/)
+Ordinals and Runes showed the demand for scalability.
 
-[Casey Rodarmor](https://x.com/rodarmor) is the creator of Ordinal Protocol and it was inspired from something [called “atoms” in the original Bitcoin codebase.](https://github.com/JeremyRubin/satoshis-version/commit/2197a48a1432f567314ce6c6c4be9270518f882e#diff-34d21af3c614ea3cee120df276c9c4ae95053830d7f1d3deaf009a4625409ad2R1942-R1952)
+### 1. Ordinals
+
+[Ordinals](https://docs.ordinals.com/overview.html), enables the creation of immutable on-chain digital artifacts. This is projected to evolve into a substantial $4.5B market by 2025.
+
+Casey Rodarmor is the creator of Ordinal Protocol and it was inspired from something called [“atoms” in the original Bitcoin codebase](https://github.com/JeremyRubin/satoshis-version/commit/2197a48a1432f567314ce6c6c4be9270518f882e#diff-34d21af3c614ea3cee120df276c9c4ae95053830d7f1d3deaf009a4625409ad2R1942-R1952).
 
 Ordinals inscriptions surpassed the [65 million mark on April 11](https://www.binance.com/en/square/post/6619950586210), less than one year and three months since their launch in January 2023 To date, Ordinals generated over $458 million worth of network fees for Bitcoin miners.
 
-## 4. Bitcoin Inscriptions
-
-Also known as Ordinal Inscriptions, [Bitcoin Inscriptions](https://www.ledger.com/academy/glossary/bitcoin-inscriptions) are a new way of writing additional data or digital artifacts on the Bitcoin blockchain. The information engraved includes images, videos, texts, audio, and more. This extra data is attached to individual satoshis (sats), the smallest unit of Bitcoin representing 0.00000001 BTC.
-
-## 5. Runes
+### 2.Runes
 
 Runes utilizes Bitcoin’s UTXO model and the OP_RETURN opcode to offer a more efficient tokenization solution for the network than the [BRC20](https://www.theblock.co/post/229757/bitcoin-based-brc-20-tokens-combined-market-value-eclipses-900-million) standard (based on the Ordinals protocols). It allows users to mint tokens on top of Bitcoin, which are generally memecoins.
 
-The Runes system was also invented by a developer named Casey Rodarmor, who also conceptualized the Ordinals protocol in early 2023.
+The Runes system was also invented by Casey Rodarmor, who also conceptualized the Ordinals protocol in early 2023.
 
 Runes generate over [$135 million in fees in first week](https://www.theblock.co/post/291132/runes-generate-over-135-million-in-fees-in-first-week-on-bitcoin-network) on Bitcoin network
+
+## What are Bitcoin Inscriptions?
+
+Also known as Ordinal Inscriptions, [Bitcoin Inscriptions](https://www.ledger.com/academy/glossary/bitcoin-inscriptions) are a new way of writing additional data or digital artifacts on the Bitcoin blockchain. The information engraved includes images, videos, texts, audio, and more. This extra data is attached to individual satoshis (sats), the smallest unit of Bitcoin representing 0.00000001 BTC.
